# Nikola-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: default.yaml
project_docs/: 00_PROJECT_CONTEXT.md  01_ARCHITECTURE.md  02_CURRENT_STATUS.md  03_ROADMAP.md  04_SPRINT_HISTORY.md  05_CODING_STANDARDS.md  06_DEVELOPMENT_WORKFLOW.md  07_ARCHITECTURAL_DECISION.md  07_DECISION.md  08_NEXT_SPRINT.md  08_TESTING_GUIDE.md  09_REPOSITORY_STRUCTURE.md  09_TESTING_GUIDE.md  10_REPOSITORY_STRUCTURE.md  11_LLM_HANDOFF.md  12_PROJECT_GLOSSARY.md  CHANGELOG.md
src/nikola/: __init__.py
src/nikola/application/: __init__.py
src/nikola/application/agent/: __init__.py
src/nikola/application/brain/: __init__.py  default_intent_classifier.py  intent_classifier.py
src/nikola/application/conversation/: __init__.py  conversation_manager.py  conversation_service.py  conversation_validator.py
src/nikola/application/memory/: __init__.py  memory_manager.py  memory_retrieval_strategy.py  memory_service.py
src/nikola/application/orchestration/: __init__.py
src/nikola/application/permissions/: __init__.py
src/nikola/application/planner/: __init__.py
src/nikola/application/scheduler/: __init__.py
src/nikola/application/tool_registry/: __init__.py
src/nikola/bootstrap/: __init__.py  compose.py  container.py
src/nikola/domain/: __init__.py
src/nikola/domain/entities/: __init__.py  command.py  conversation.py  memory_entry.py  memory_query.py  message.py  reasoning_request.py  reasoning_response.py  response.py  session.py  task.py
src/nikola/domain/errors/: __init__.py  domain_errors.py
src/nikola/domain/events/: __init__.py  task_events.py
src/nikola/domain/ports/: __init__.py  brain_port.py  config_provider_port.py  conversation_repository_port.py  logger_port.py  memory_repository_port.py
src/nikola/domain/value_objects/: __init__.py  command_id.py  conversation_id.py  enums.py  intent.py  memory_id.py  message_id.py  session_id.py  task_id.py
src/nikola/infrastructure/: __init__.py
src/nikola/infrastructure/brains/: __init__.py  brain_factory.py  brain_registry.py  null_brain.py
src/nikola/infrastructure/config/: __init__.py  env_config_provider.py  loader.py  settings.py  yaml_source.py
src/nikola/infrastructure/event_bus/: __init__.py
src/nikola/infrastructure/logging/: __init__.py  formatters.py  logging_service.py
src/nikola/infrastructure/persistence/: __init__.py
src/nikola/infrastructure/persistence/file_store/: __init__.py
src/nikola/infrastructure/persistence/in_memory/: __init__.py  conversation_repository.py  memory_repository.py
src/nikola/infrastructure/persistence/sqlite/: __init__.py
src/nikola/infrastructure/persistence/sqlite/migrations/: __init__.py
src/nikola/infrastructure/persistence/vector_store/: __init__.py
src/nikola/infrastructure/scheduler/: __init__.py
src/nikola/interfaces/: __init__.py
src/nikola/interfaces/cli/: __init__.py  cli_app.py
src/nikola/interfaces/shared/: __init__.py
src/nikola/interfaces/voice/: __init__.py
src/nikola/interfaces/web/: __init__.py
src/nikola/plugins/: __init__.py
src/nikola/plugins/base/: __init__.py
src/nikola/plugins/browser/: __init__.py
src/nikola/plugins/filesystem/: __init__.py
src/nikola/plugins/messaging/: __init__.py
src/nikola/plugins/system_info/: __init__.py
src/nikola/plugins/terminal/: __init__.py
src/nikola/plugins/vision/: __init__.py
src/nikola/plugins/voice/: __init__.py
tests/unit/: test_cli_bootstrap.py
tests/unit/application/brain/: test_intent_classifier.py
tests/unit/application/conversation/: test_conversation_manager.py  test_conversation_service.py  test_conversation_validator.py
tests/unit/application/memory/: test_memory_manager.py  test_memory_service.py  test_retrieval_strategy.py
tests/unit/bootstrap/: conftest.py  test_compose.py  test_compose_brain.py  test_compose_conversation.py  test_compose_memory.py  test_container.py
tests/unit/config/: conftest.py  test_env_config_provider.py  test_loader.py  test_settings.py  test_yaml_source.py
tests/unit/domain/: test_errors.py  test_logger_port.py
tests/unit/domain/brain/: test_brain_error.py  test_intent.py  test_reasoning_request.py  test_reasoning_response.py
tests/unit/domain/conversation/: test_conversation.py  test_conversation_enums.py  test_conversation_ids.py  test_message.py
tests/unit/domain/entities/: test_command.py  test_response.py  test_session.py  test_task.py
tests/unit/domain/events/: test_task_events.py
tests/unit/domain/memory/: test_memory_entry.py  test_memory_error.py  test_memory_query.py  test_memory_value_objects.py
tests/unit/domain/value_objects/: test_command_id.py  test_enums.py  test_identifier_distinctness.py  test_session_id.py  test_task_id.py
tests/unit/infrastructure/brains/: test_brain_factory.py  test_brain_registry.py  test_null_brain.py
tests/unit/infrastructure/memory/: test_in_memory_memory_repo.py
tests/unit/infrastructure/persistence/: test_in_memory_conversation_repo.py
tests/unit/logging/: conftest.py  test_formatters.py  test_get_logger.py  test_logging_service.py
